fix letter spacing property https://coveord.atlassian.net/browse/JSUI-535

--- a/sass/_ResponsiveFacets.scss
+++ b/sass/_ResponsiveFacets.scss
@@ -32,7 +32,7 @@
       background: $color-blueish-white;
       font-size: $font-size-bigger;
       font-weight: 700;
-      letter-spacing: 0.22;
+      letter-spacing: 0.22px;
       line-height: 22px;
 
       .coveo-facet-header-filter-by {
